--- a/styles.css
+++ b/styles.css
@@ -2,33 +2,34 @@ body {
 	margin: 0;
 }
 
-h1 {
-    color: red;
-    text-align: center;
-}
 
 header, nav, section, footer {
     margin: 0 auto 0 auto;
     width: 950px;
     text-align: center;
 }
-
 header {
     height: 200px;
     background: url('banniere.jpg') no-repeat scroll center 0;
 }
+
+
+#gif {
+    float: right;
+    height: 300px;
+    padding-right: 10px;
+}
+
 
 nav {
     margin-top: 178px;
     width: 99%;
     float: left;
 }
-
 nav li {
     display:inline;
     font-size: 150%;
 }
-
 nav li a {
     padding: 10px;
     color: white;
@@ -36,15 +37,11 @@ nav li a {
     font-weight: bold;
     text-decoration: none;
 }
-
 nav li a:hover {
     color: black;
     background-color: white;
 }
 
-#principal {
-    height: 350px;
-}
 
 #principal article {
     padding-top: 10px;
@@ -53,11 +50,9 @@ nav li a:hover {
     text-align: justify;
     float: left;
 }
-
 #principal article img {
-    float: left;
+    float: right;
 }
-
 #principal aside {
     margin-top: 0;
     vertical-align: top;
@@ -65,20 +60,19 @@ nav li a:hover {
     float: right;
     height: 100%;
 }
-
 #principal aside img:first-child{
     margin-top: 100px;
+    float: right;
 }
-
 #principal aside img {
     margin-left:auto;
     margin-right:auto;
     clear: both;
 }
-
 #principal aside p {
     margin-top: 0;
 }
+
 
 footer {
     position: fixed;
@@ -89,16 +83,11 @@ footer {
     color: #bbb;
     text-align:center;/*texte centré*/
 }
-
-footer p{
-    margin-top: 3px;
-    color: #bbb;
-}
-
 footer a{
     color: #bbb;
 text-decoration:none;
 }
+
 
 @font-face{ 
     font-family: "Fuse";
