--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,11 @@
+/*style de la page*/
 html {
     background-color: #2d2d2d;
     color: whitesmoke
 }
 
 body {
-	margin: 0;
+    font-family: 'Roboto-ThinItalic';
 }
 
 header, section {
@@ -14,20 +15,7 @@ header, section {
 
 header {
     height: 24vw;
-    background: url('banniere.jpg') no-repeat scroll center 0;
-}
-
-p {
-    font-size: 110%;
-}
-
-/*gif qui tourne*/
-#gif {
-    float: right;
-    height: 320px;
-    padding-right: 10px;
-    padding-left: 5%;
-    padding-top: 5%;
+    background: url('../banniere.jpg') no-repeat scroll center 0;
 }
 
 /*barre de navigation*/
@@ -82,7 +70,6 @@ p {
   background: white;
   color : #2f3640;
 }
-
 .Bouton_de_recherche {
     color: white;
     float: right;
@@ -95,7 +82,6 @@ p {
     align-items: center;
     transition: 0.4s;
 }
-
 .Recherche {
     border:none;
     background: none;
@@ -110,38 +96,7 @@ p {
 
 }
 
-/*texte milieu de page*/
-#principal article {
-    display: flex;
-    padding-top: 10px;
-    width: 100%;
-    height: 100%;
-    text-align: justify;
-}
-#principal article img {
-    margin-left: 1rem;
-}
-#principal aside {
-    margin-top: 0;
-    vertical-align: top;
-    width: 27%;
-    float: right;
-    height: 100%;
-}
-#principal aside img:first-child{
-    margin-top: 100px;
-    float: right;
-}
-#principal aside img {
-    margin-left:auto;
-    margin-right:auto;
-    clear: both;
-}
-#principal aside p {
-    margin-top: 0;
-}
-
-
+/*pied de page*/
 footer {
     position: fixed;
     bottom: 0px;
@@ -155,8 +110,7 @@ footer a{
     text-decoration:none;
 }
 
-
-@font-face{ 
-    font-family: "Fuse";
-    src: url('FUSENORM.TTF') format("truetype");
+@font-face {
+    font-family: 'Roboto-ThinItalic';
+    src: url(../fonts/Roboto-Thin.ttf) format('truetype');
 }
