--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,7 @@ html {
 
 body {
     font-family: 'Roboto-ThinItalic';
+    width: 100%;
 }
 
 header, section {
@@ -20,9 +21,9 @@ header {
 
 /*barre de navigation*/
 #navm {
-    padding-left: 5px;
-    font-size: 15px;
-    padding-top: 19%;
+    padding-left: 5rem;
+    font-size: 1.5rem;
+    padding-top: 17rem;
 }
 #navm li {
     display:inline;
