--- a/css/montres.css
+++ b/css/montres.css
@@ -1,51 +1,88 @@
-body {
-	margin: 0;
+.main {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    min-height: 100vh;
+    margin: 15% 50px 0px 50px;
+    padding: 2%;
 }
 
-h1 {
-    color:silver;
-    text-align: center;
+.main h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: black;
 }
 
-#sectionthema {
-    margin: 50px auto 200px auto;
-    height: 150px;
+.main .ads {
+    object-fit: contain;
+    margin: 25px 0 25px 0;
 }
 
-#sectionthema article {
-    width: 33%;
-    height: 256px;
+.carousel-articles {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0 0 25px 0;
 }
 
-#sectionthema a {
-    font-family: 'Fuse';
-    font-size: xx-large;
-    font-weight:400;
-    margin-top: 0;
-	display:block;
-	width:100%;
-	height:100%;
-	color: black;
-	text-decoration: none;
+.carousel-article {
+    flex-direction: row;
+    position: relative;
+    width: 250px;
+    height: 350px;
+    box-shadow: 0 0 12px #0000000c;
+    border-radius: 8px;
+    transition: box-shadow linear 0.1s;
+    margin: 10px;
 }
 
-#sectionthema #gauche {
-    float:left;
-    width: 33%;
-    background: transparent url('../images/montrehomme.jpg') no-repeat center 10px;
-    border: white thin solid;
-    border-radius: 10px;
+.carousel-article:hover {
+    cursor: pointer;
 }
 
-#sectionthema #milieu {
-    float: left;
-    width: 32%;
-    margin-left: 5px;
-    background: transparent url('../images/montrefemme.png') no-repeat center 0;
-    border: white thin solid;
-    border-radius: 10px;
+.carousel-article:hover > .info h1 {
+    transition: color linear 0.1s;
+    color: silver;
 }
 
-#sectionthema #gauche:hover, #sectionthema #milieu:hover, #sectionthema #droite:hover {
-    border: black thin solid;
+.carousel-article img {
+    width: 100%;
+    height: 75%;
+    object-fit: contain;
 }
+
+.carousel-article .info {
+    width: 100%;
+    height: 25%;
+    padding-left: 10px;
+}
+
+.carousel-article .info h1 {
+    margin: 0;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: black;
+}
+
+.carousel-article .info h2 {
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: black;
+}
+
+.carousel-article .info h3 {
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: black;
+}
+
+hr{
+    margin: 100px auto;
+    width: 90%;
+    height: 2px;
+    background-color: black;
+    border: none;
+  }
