--- a/css/header.css
+++ b/css/header.css
@@ -1,117 +1,32 @@
-/*style de la page*/
-html {
-    background-color: #2d2d2d;
-    color: whitesmoke
-}
+*{margin: 0;}
 
-body {
-    font-family: 'Roboto-ThinItalic';
+.header {
     width: 100%;
+    background-color: rgba(0,0,0,.3);
 }
 
-header, section {
-    margin: 0 auto 0 auto;
-    width: 85vw;
-}
-
-header {
-    height: 24vw;
-    background: url('../banniere.jpg') no-repeat scroll center 0;
-}
-
-/*barre de navigation*/
-#navm {
-    padding-left: 5rem;
-    font-size: 1.5rem;
-    padding-top: 17rem;
-}
-#navm li {
-    display:inline;
-    font-size: 150%;
-    margin: 15px;
-}
-#navm li a {
-    display: inline-block;
-    border: 0;
-    margin: 20px auto;
-    background-color: black;
+.header ul {
     text-align: center;
-    border: 2px solid white;
-    padding: 10px;
-    color: white;
-    outline: none;
-    border-radius: 5px;
-    transition: 0.25s;
-    cursor: pointer;
+}
+
+.header ul li {
+    list-style: none;
+    display: inline-block;
+}
+
+.header ul li a {
+    display: block;
     text-decoration: none;
-  
-}
-#navm li a:hover {
-    background: rgb(58, 58, 58);
-}
-
-/*barre de recherche*/
-.Barre_de_recherche {
-    position: absolute;
-    right: 5%;
-    top: 25%;
-    transform:  translate(-50px,50px);
-    background:black;
-    height: 40px;
-    border-radius: 40px;
-    padding: 10px;
-
-}
-.Barre_de_recherche:hover > .Recherche {
-    width: 240px;
-    padding: 0 6px;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+    font-weight: 600;
+    padding: 25px;
+    transition: all ease 0.5s;
 }
 
-.Barre_de_recherche:hover > .Bouton_de_recherche {
-  background: white;
-  color : #2f3640;
-}
-.Bouton_de_recherche {
-    color: white;
-    float: right;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: #2f3640;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.4s;
-}
-.Recherche {
-    border:none;
-    background: none;
-    outline:none;
-    float:left;
-    padding: 0;
-    color: white;
-    font-size: 16px;
-    transition: 0.4s;
-    line-height: 40px;
-    width: 0px;
-
-}
-
-/*pied de page*/
-footer {
-    position: fixed;
-    bottom: 0px;
-    height: 5%;
-    width: 100%;
-    background-color:#131313; /*Couleur de fond*/
-    text-align:center;/*texte centré*/
-}
-footer a{
-    color: white;
-    text-decoration:none;
-}
-
-@font-face {
-    font-family: 'Roboto-ThinItalic';
-    src: url(../fonts/Roboto-Thin.ttf) format('truetype');
+.header ul li a:hover {
+    background-color: #211b4385;
 }
