--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,12 @@
 * {box-sizing: border-box;}
 
+body {
+    background: url(../images/montrecollection4.jpg) no-repeat;
+    background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+}
+
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
