--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     background-color: rgba(231, 231, 231, 0.781);
     min-height: 15vh;
-    margin: 0px 50px;
+    margin: 3% 8%;
     padding: 2%;
 }
 
@@ -39,7 +39,7 @@ p {
     font-size: 1.3rem;
     font-weight: 600;
     margin-top: 2%;
-    margin-bottom: 4%;
+    margin-bottom: 2%;
 }
 
 @font-face {
