--- a/css/collection.css
+++ b/css/collection.css
@@ -38,28 +38,29 @@ body {
     flex-direction: row;
     position: relative;
     width: 40%;
-    height: 450px;
+    height: 100%;
     box-shadow: 0 0 12px #0000000c;
     border-radius: 8px;
     transition: box-shadow linear 0.1s;
     margin: 10px;
+    border: 3px solid black;
 }
 
 .carousel-article:hover {
-    cursor: pointer;
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 .carousel-article img {
     width: 100%;
     height: 75%;
     object-fit: contain;
+    padding: 0;
 }
 
 .carousel-article .info {
     width: 100%;
     height: 25%;
-    padding: 10px;
+    padding: 0 0 0 10px;
 }
 
 .carousel-article .info h1 {
@@ -97,4 +98,23 @@ hr{
 @font-face {
     font-family: 'Roboto-ThinItalic';
     src: url(../fonts/Roboto-Thin.ttf) format('truetype');
+}
+
+.achat {
+    width: 30%;
+    padding: 0.7rem 1rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    background-color: #555555;
+    color: white;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+}
+input[type=submit]:hover {
+    background-color: #353535;
+    cursor: pointer;
 }
