--- a/css/collection.css
+++ b/css/collection.css
@@ -8,16 +8,17 @@ body {
 .main {
     display: flex;
     flex-direction: column;
-    background-color: rgb(255, 255, 255);
+    background-color:black;
     min-height: 80vh;
     margin: 3% 50px 3% 50px;
     padding: 2%;
+    opacity: 0.90;
 }
 
 .main h1 {
     font-size: 1.8rem;
     font-weight: 600;
-    color: black;
+    color: white;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -38,36 +39,35 @@ body {
     flex-direction: row;
     position: relative;
     width: 40%;
-    height: 100%;
-    box-shadow: 0 0 12px #0000000c;
+    height: 450px;
+    box-shadow: 0 0 5px white;
     border-radius: 8px;
     transition: box-shadow linear 0.1s;
     margin: 10px;
-    border: 3px solid black;
 }
 
 .carousel-article:hover {
-    border: 2px solid black;
+    cursor: pointer;
+    border: 1px solid white;
 }
 
 .carousel-article img {
     width: 100%;
     height: 75%;
     object-fit: contain;
-    padding: 0;
 }
 
 .carousel-article .info {
     width: 100%;
     height: 25%;
-    padding: 0 0 0 10px;
+    padding: 10px;
 }
 
 .carousel-article .info h1 {
     margin: 0;
     font-size: 1.7rem;
     font-weight: bold;
-    color: black;
+    color: white;
     font-family: 'Roboto-ThinItalic';
 }
 
@@ -75,7 +75,7 @@ body {
     margin: 0;
     font-size: 1.2rem;
     font-weight: 600;
-    color: black;
+    color: white;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -83,7 +83,7 @@ body {
     margin: 0;
     font-size: 1rem;
     font-weight: 600;
-    color: black;
+    color: white;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -91,30 +91,11 @@ hr{
     margin: 100px auto;
     width: 90%;
     height: 2px;
-    background-color: black;
+    background-color: white;
     border: none;
   }
 
 @font-face {
     font-family: 'Roboto-ThinItalic';
     src: url(../fonts/Roboto-Thin.ttf) format('truetype');
-}
-
-.achat {
-    width: 30%;
-    padding: 0.7rem 1rem;
-    margin-top: 1rem;
-    margin-left: 1rem;
-    font-size: 1rem;
-    border: none;
-    outline: none;
-    border-radius: 50px;
-    background-color: #555555;
-    color: white;
-    text-align: center;
-    font-family: 'Raleway', sans-serif;
-}
-input[type=submit]:hover {
-    background-color: #353535;
-    cursor: pointer;
 }
