--- a/css/collection.css
+++ b/css/collection.css
@@ -8,7 +8,7 @@ body {
 .main {
     display: flex;
     flex-direction: column;
-    background-color:black;
+    background-color: black;
     min-height: 80vh;
     margin: 3% 50px 3% 50px;
     padding: 2%;
@@ -39,28 +39,28 @@ body {
     flex-direction: row;
     position: relative;
     width: 40%;
-    height: 450px;
-    box-shadow: 0 0 5px white;
+    height: 550px;
+    box-shadow: 0 0 12px white;
     border-radius: 8px;
     transition: box-shadow linear 0.1s;
     margin: 10px;
 }
 
 .carousel-article:hover {
-    cursor: pointer;
-    border: 1px solid white;
+    border: 2px solid white;
 }
 
 .carousel-article img {
     width: 100%;
     height: 75%;
     object-fit: contain;
+    padding: 0;
 }
 
 .carousel-article .info {
     width: 100%;
     height: 25%;
-    padding: 10px;
+    padding: 0 0 0 10px;
 }
 
 .carousel-article .info h1 {
@@ -98,4 +98,23 @@ hr{
 @font-face {
     font-family: 'Roboto-ThinItalic';
     src: url(../fonts/Roboto-Thin.ttf) format('truetype');
+}
+
+.achat {
+    width: 30%;
+    padding: 0.7rem 1rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+}
+input[type=submit]:hover {
+    background-color: #b6b6b6;
+    cursor: pointer;
 }
