--- a/css/accueil.css
+++ b/css/accueil.css
@@ -1,5 +1,50 @@
-body {
-    background: url(../images/montrecollection1.jpg) no-repeat;
-    background-size: cover;
-    height: 100vh;
+body{
+background: url(../images/montrecollection5.jpg) no-repeat;
+background-size: cover;
+font-family: 'Raleway', sans-serif;
+height: 100vh;
+margin-left: auto;
+margin-right: auto;
+background-position: center;
+}
+.containers{
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+width: 100%;
+}
+.containers span{
+text-transform: uppercase;
+display: block;
+}
+.text1{
+color: white;
+font-size: 700%;
+font-weight: 700;
+letter-spacing: 8px;
+margin-bottom: 20px;
+background: black;
+position: relative;
+animation: text 3s 1;
+}
+.text2{
+font-size: 440%;
+color: #CEA141;
+}
+
+@keyframes text {
+    0%{
+        color: black;
+        margin-bottom: -66px;
+    }
+    30%{
+        letter-spacing: 25px;
+        margin-bottom: -66px;
+    }
+    85%{
+        letter-spacing: 8px;
+        margin-bottom: -66px;
+    }
 }
